# gitea-pikman-update-manager

./: Cargo.toml  Makefile  main.sh
.github/: github_pushback.sh
.github/workflows/: build-canaryv3.yml  build-nestv3.yml  github-pushback.yml  release-canaryv3.yml  release-nestv3.yml
data/: apt_full_upgrade  apt_update  com.github.pikaos-linux.pikmanupdatemanager.desktop  com.github.pikaos-linux.pikmanupdatemanager.gschema.xml  flatpak-installer  flatpak-installer.desktop  modify_repo.sh  move_repo.sh  pikman-update-manager-autostart  pikman-update-manager-autostart.desktop  software-properties-gtk  software-properties-gtk.desktop  wget.sh
data/polkit-1/actions/: com.github.pikaos-linux.pikmanupdatemanager.modify.repo.policy  com.github.pikaos-linux.pikmanupdatemanager.update.manager.policy  com.github.pikaos-linux.pikmanupdatemanager.upgrade.manager.policy
debian/: changelog  control  postinst  rules
just_in_case/: __main__.py
locales/: de_DE.json  en_US.json
pika-build-config/: amd64-v3.sh  i386.sh
src/: main.rs
src/apt_get_upgradable/: main.rs
src/apt_package_row/: imp.rs  mod.rs
src/apt_update/: main.rs
src/apt_update_page/: mod.rs  process.rs
src/build_ui/: mod.rs
src/debug_server/: get_upgradable.rs  main.rs  update_percent.rs  update_status.rs
src/gui/: config.rs  main.rs  style.css
src/gui/apt_package_row/: imp.rs  mod.rs
src/gui/apt_update_page/: mod.rs
src/gui/build_ui/: mod.rs
src/lib/: lib.rs
src/lib/apt_install_progress_socket/: mod.rs
src/lib/apt_update_progress_socket/: mod.rs
src/lib/pika_unixsocket_tools/: mod.rs
src/pika_unixsocket_tools/: lib.rs
