[package]
name = "pikman-update-manager"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pika_unixsocket_tools"
path = "src/lib/lib.rs"

[[bin]]
name = "pikman-update-manager"
path = "src/bin/gui/main.rs"

[[bin]]
name = "apt_update"
path = "src/bin/apt/apt_update/main.rs"

[[bin]]
name = "apt_full_upgrade"
path = "src/bin/apt/apt_full_upgrade/main.rs"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_12"] }
async-channel = "2.1.1"
rust-i18n = "3.0.1"
rust-apt = "0.8.0"
apt-deb822-tools = { package = "deb822-tools", git = "https://github.com/CosmicFusion/deb822-tools" }
apt-legacy-tools = { version = "0.1.3", package = "legacy-apt-list-tools-rs", git = "https://github.com/CosmicFusion/legacy-apt-list-tools-rs" }
tokio = { version = "1", features = ["full"] }
tokio-uds = "0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
async-trait = "0.1.80"
futures = "0.3.30"
pretty-bytes = "0.2.2"
crossbeam-utils = "0.8.20"
chrono = "0.4.38"
lock_api = "0.4.2"
libflatpak = { version = "0.5.0", package = "libflatpak", features = ["v1_11_1"] }
regex = "1.10.6"
duct = "0.13.7"
reqwest = { version = "0.11", features = ["blocking"] }
strfmt = "0.2.4"
configparser = "3.1.0"
ksni = "0.2.2"

